@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rlam.1,v 1.6 2010/06/18 01:12:57 greg Exp $"
+.\" RCSid "$Id: rlam.1,v 1.7 2010/06/18 21:22:49 greg Exp $"
 .TH RLAM 1 7/8/97 RADIANCE
 .SH NAME
 rlam - laminate records from multiple files
@@ -6,6 +6,8 @@ rlam - laminate records from multiple files
 .B rlam
 [
 .B \-tS
+][
+.B \-u
 ][
 .B \-iaN
 |
@@ -69,6 +71,9 @@ is reset to the empty string.
 .PP
 A hyphen ('-') by itself can be used to indicate the standard
 input, and may appear multiple times.
+The
+.I \-u
+option forces output after each record (i.e., one run through inputs).
 .SH EXAMPLE
 To join files output1 and output2, separated by a comma:
 .IP "" .2i
